force-app/main/default/objects/PRISM_WorkOrder__c/PRISM_WorkOrder__c.object-meta.xml
<CustomObject>
    <description>Work order for repair or maintenance driven by a Defect Finding or AI Priority Queue.</description>
    <label>Work Order</label>
    <nameField>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
        <displayFormat>WO-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>