force-app/main/default/objects/PRISM_WorkOrder__c/fields/AIPriorityQueue__c.field-meta.xml
<CustomField>
    <fullName>AIPriorityQueue__c</fullName>
    <label>AI Priority Queue</label>
    <type>Lookup</type>
    <referenceTo>PRISM_AIPriorityQueue__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
</CustomField>