force-app/main/default/objects/PRISM_WorkOrder__c/fields/DefectFinding__c.field-meta.xml
<CustomField>
    <fullName>DefectFinding__c</fullName>
    <label>Defect Finding</label>
    <type>Lookup</type>
    <referenceTo>PRISM_DefectFinding__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>WorkOrders</relationshipName>
</CustomField>