force-app/main/default/objects/PRISM_WorkOrder__c/fields/ResolutionNotes__c.field-meta.xml
<CustomField>
    <fullName>ResolutionNotes__c</fullName>
    <label>Resolution Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>