force-app/main/default/objects/PRISM_WorkOrder__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Emergency Repair</fullName><default>false</default><label>Emergency Repair</label></value>
            <value><fullName>Scheduled Repair</fullName><default>false</default><label>Scheduled Repair</label></value>
            <value><fullName>Preventive Maintenance</fullName><default>true</default><label>Preventive Maintenance</label></value>
            <value><fullName>Vegetation Management</fullName><default>false</default><label>Vegetation Management</label></value>
            <value><fullName>Inspection Follow-up</fullName><default>false</default><label>Inspection Follow-up</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
</CustomField>